# shinbun

./: CHANGELOG.md  Cargo.toml  README.org  flake.nix
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
examples/: solarized_dark.toml
src/: app.rs  cache.rs  config.rs  feeds.rs  main.rs  opml.rs  query.rs  theme.rs  ui.rs
src/app/: actions.rs  display.rs  input.rs  loading.rs  mod.rs  navigation.rs  read_state.rs  search.rs  types.rs
src/views/: entry_view.rs  feeds_list_view.rs  help_view.rs  links_view.rs  mod.rs
