[package]
name = "shinbun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
dirs = "5.0.1"
feed-rs = "2.1.0"
html2text = "0.13.0"
ratatui = { version = "0.28.1", features = ["unstable-rendered-line-info"]}
regex = "1.10.4"
reqwest = "0.12.2"
rusqlite = "0.32.1"
serde = { version = "1.0.204", features = ["derive"] }
tl = "0.7.8"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.15"
