[package]
name = "shinbun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
crossterm = "0.29.0"
dirs = "6.0.0"
feed-rs = "2.1.0"
html2text = "0.16.7"
open = "5.3.3"
ratatui = "0.30.0"
reqwest = "0.13.2"
rusqlite = "0.38.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.149"
tl = "0.7.8"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "process", "macros"] }
toml = "0.9.8"
tui-markdown = "0.3.7"

[dev-dependencies]
tempfile = "3"
